k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  namespace: website
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website-app
  template:
    metadata:
      labels:
        app: website-app
    spec:
      containers:
        - name: website
          image: 477016018110.dkr.ecr.us-west-2.amazonaws.com/website:latest
          ports:
            - containerPort: 9000
