k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: website
  labels:
    app: website-app
spec:
  selector:
    app: website-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
